# sl-cr

./: .gitignore  README  README.md  README_EXPERIMENTS.md  main.pl  pyproject.toml
input/: ex1.pl  ex2.pl  ex3.pl
notebooks/: 01_analyze_results.ipynb  analyse.ipynb  merge_results.py  merged_results.parquet  results.parquet
src/sl_cr/: __init__.py  app_builder.py  cli.py  config.py  experiment.py  facts.py  infr_builder.py  metrics.py  pl_strategy.py  policies.py  prolog_session.py  scripts.py  search_space.py  telemetry.py
src/sl_cr/builders/: __init__.py  application.py  infrastructure.py
src/sl_cr/prolog/: main.pl
