[project]
name = "sl-cr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eclypse",
    "ipykernel>=7.3.0",
    "matplotlib>=3.8.0",
    "networkx>=3.0",
    "pandas>=2.2.0",
    "ray[tune]>=2.9.0",
    "seaborn>=0.13.0",
    "swiplserver>=1.0.2",
]

[project.scripts]
cr = "sl_cr.scripts:cr"
debug = "sl_cr.scripts:debug"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
filter_files = true
skip = ["__init__.py"]

[tool.uv.sources]
eclypse = { path = "../eclypse", editable = true }
